<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_menu_home"
            />
        <item
            android:id="@+id/nav_item_timeline"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_menu_timeline"
            />
        <item
            android:id="@+id/nav_item_interest"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_menu_interest"
            />
        <item
            android:id="@+id/nav_item_safety"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_menu_safety"
            />
        <item
            android:id="@+id/nav_item_message"
            android:icon="@drawable/ic_launcher_foreground"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:title="@string/nav_menu_message"
            />
    </group>
</menu>