<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_interest_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/toolbar_title"
                android:text="@string/intrest_add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:fontFamily="@font/nanum_square"/>

            <Button
                android:id="@+id/btn_interest_add_back"
                android:layout_height="wrap_content"
                android:layout_width="40dp"
                android:layout_gravity="left"
                android:fontFamily="@font/nanum_square"
                android:background="@color/colorPrimaryDark"
                android:text="뒤로"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="10dp"/>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_interest_add_nickname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intrest_add_nickname"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intrest_add_location"
                android:layout_marginTop="@dimen/content_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_interest_add_location_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="시/도"/>

                <Button
                    android:id="@+id/btn_interest_add_location_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="시/군/구"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intrest_add_disaster_kind"
                android:layout_marginTop="@dimen/content_margin"/>

            <RadioGroup
                android:id="@+id/radioGroup_disaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_disaster_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="재난1" />

                <RadioButton
                    android:id="@+id/radio_disaster_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="재난2"/>

                <RadioButton
                    android:id="@+id/radio_disaster_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="재난3"/>

                <RadioButton
                    android:id="@+id/radio_disaster_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="재난4"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intrest_add_disaster_keyword"
                android:layout_marginTop="@dimen/content_margin"/>

            <LinearLayout
                android:id="@+id/check_keyword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_keyword_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"/>

                <CheckBox
                    android:id="@+id/check_keyword_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"/>

                <CheckBox
                    android:id="@+id/check_keyword_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"/>

                <CheckBox
                    android:id="@+id/check_keyword_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"/>

                <CheckBox
                    android:id="@+id/check_keyword_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="4"/>

                <CheckBox
                    android:id="@+id/check_keyword_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"/>

                <CheckBox
                    android:id="@+id/check_keyword_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="6"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="저장" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>
